--- a/calciferapp/pubspec.yaml
+++ b/calciferapp/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.21.1
+  flutterfire_ui: ^0.4.3+7
+  cloud_firestore: ^3.4.6
 
 dev_dependencies:
   flutter_test:
