--- a/calciferapp/pubspec.yaml
+++ b/calciferapp/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.21.1
   cloud_firestore: ^3.4.7
+  http: ^0.13.5
+  webview_flutter: ^3.0.4
+  webview_flutter_web: ^0.1.0+4
 
 dev_dependencies:
   flutter_test:
