--- a/calciferapp/pubspec.yaml
+++ b/calciferapp/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^0.13.5
   webview_flutter: ^3.0.4
   webview_flutter_web: ^0.1.0+4
+  mongo_dart: ^0.7.4+1
+  realm_dart: ^0.4.0+beta
 
 dev_dependencies:
   flutter_test:
