mongodb --> sqlite로 수정

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "python.autoComplete.extraPaths": [
         "C:\\Program Files (x86)\\Intel\\openvino_2021.4.752\\python"
+    ],
+    "python.analysis.extraPaths": [
+        "C:\\Program Files (x86)\\Intel\\openvino_2021.4.752\\python"
     ]
 }
